--- a/src/containers/Projects/Projects.css
+++ b/src/containers/Projects/Projects.css
@@ -1,6 +1,7 @@
 .projects {
+  width: 700px;
   display: flex;
-  flex-flow: column;
+  flex-direction: column;
   align-items: center;
   margin: auto;
 }
@@ -10,8 +11,6 @@
   height: 70px;
   background-color: lightgray;
   margin: 0;
-  display: flex;
-  flex-flow: row;
 }
 
 .header p {
@@ -26,4 +25,23 @@
   position: absolute;
   top: 40%;
   right: 20px;
+}
+
+.projects .title_projects {
+  width: 100%;
+  font-size: 28px;
+  margin-top: 10px;
+}
+
+.new_project {
+  width: 100%;
+}
+
+.new_project input {
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  width: 100%;
+  font-size: 15px;
+  margin-top: 10px;
+  padding: 10px;
 }
