--- a/src/containers/Projects/Projects.css
+++ b/src/containers/Projects/Projects.css
@@ -23,8 +23,8 @@
 
 .header div {
   position: absolute;
-  top: 40%;
-  right: 20px;
+  top: 25px;
+  right: 25px;
 }
 
 .projects .title_projects {
