--- a/src/components/Task/Task.css
+++ b/src/components/Task/Task.css
@@ -1,14 +1,33 @@
-.Task {
+.task {
   width: 700px;
-  border: 1px solid black;
+  border: 1px solid lightgray;
   display: flex;
   justify-content: space-between;
   margin: auto;
   padding: 10px;
+  border-radius: 3px;
 }
 
 .title_date {
   flex-grow: 1;
+  margin: 0 10px;
+  font-size: 14px;
+}
+
+.task_title {
+  text-decoration: none;
+}
+
+.task_title_line {
+  text-decoration: line-through;
+}
+
+.task_date {
+  color: green;
+  font-size: 11px;
+}
+
+.task input.task_checkBox {
   margin: 0 10px;
 }
 
@@ -30,4 +49,26 @@
 
 .message_count {
   margin: 0 10px;
+}
+
+.task_input_form {
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+}
+
+.task_row_input {
+  border-radius: 3px;
+  padding: 10px;
+  width: 100%;
+  border: 1px solid lightblue;
+}
+
+.task_input_form button {
+  margin: 5px 10px 5px 0;
+  width: 135px;
+}
+
+.task:hover {
+  background-color: lightblue;
 }
