--- a/src/components/Deadline/Deadline.css
+++ b/src/components/Deadline/Deadline.css
@@ -1,20 +1,22 @@
-.Deadline {
-  position: fixed;
-  z-index: 500;
-  background-color: white;
-  width: 70%;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px black;
-  padding: 16px;
-  left: 15%;
-  top: 30%;
-  box-sizing: border-box;
-  transition: all 0.3s ease-out;
+.deadline_header {
+  padding: 5px;
+  text-align: center;
+  font-size: 20px;
+  border-bottom: 1px solid lightgray;
 }
 
-@media (min-width: 600px) {
-  .Deadline {
-      width: 500px;
-      left: calc(50% - 250px);
-  }
+.deadline_buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.deadline_buttons button {
+  margin: 10px;
+  width: 135px;
+}
+
+.deadline_input {
+  margin: 10px;
+  width: 250px;
+  padding: 5px;
 }
