--- a/src/containers/Comments/Comments.css
+++ b/src/containers/Comments/Comments.css
@@ -1,13 +1,15 @@
-.Comments {
-  position: fixed;
-  z-index: 500;
-  background-color: white;
-  width: 70%;
-  border: 1px solid #ccc;
-  box-shadow: 1px 1px 1px black;
-  padding: 16px;
-  left: 15%;
-  top: 30%;
-  box-sizing: border-box;
-  transition: all 0.3s ease-out;
+textarea.comments_input {
+  width: 100%;
+  height: 80px;
+  padding: 10px;
+}
+
+.comment_save {
+  margin: 10px;
+  width: 140px;
+  float: right;
+}
+
+.clear_fix {
+  clear: both;
 }
