--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,20 @@
+.header {
+  position: relative;
+  height: 70px;
+  background-color: lightgray;
+  margin: 0;
+}
 
+.header p {
+  font-size: 32px;
+  text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  margin: auto;
+  padding: 10px;
+}
+
+.header div {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
