--- a/src/containers/SignIn/SignIn.css
+++ b/src/containers/SignIn/SignIn.css
@@ -6,6 +6,7 @@
 .sign_in_form {
   display: flex;
   flex-direction: column;
+  margin-bottom: 15px;
 }
 
 .sign_in_btn {
@@ -21,4 +22,8 @@
   color: red;
   font-size: 16px;
   margin-bottom: 10px;
+}
+
+.sign_up_link {
+  font-size: 15px;
 }
